--- a/config/elvish/history
+++ b/config/elvish/history
@@ -263,6 +263,7 @@ pylint --enable-all-extensions --enable=all --generate-toml-config > pylint.toml
 pylint --help-msg=docstring-first-line-empty
 pylint --list-group
 pylint --list-msgs-enabled
+python -m http.server -b 127.0.0.1 8000 -d zig-out/docs
 readlink /bin/rustc
 rename --verbose --interactive build build2 hashing/**
 resolvectl
@@ -374,6 +375,7 @@ xkbcli interactive-wayland
 xsltproc gir-fixes/Vips-8.0.xslt /usr/share/gir-1.0/Vips-8.0.gir > NewVips.gir
 yt-dlp -S 'res:720' 'https://www.youtube.com/watch?v=lLv1s7rKeCM'
 zgrep CONFIG_ZRAM_MULTI_COMP /proc/config.gz
+zig build -Dno-bin -fincremental --watch run --verbose --summary all -- samples/image.avif
 zig build -Dtarget=x86_64-linux-gnu.2.34
 zig build -Dtarget=x86_64-linux-musl -Doptimize=ReleaseSafe
 zig build install --prefix ~/.local -Doptimize=ReleaseFast
