add examples of fetching zig packages with different schemes
Signed-off-by: Bernard Assan <mega.alpha100@gmail.com>

--- a/config/elvish/history
+++ b/config/elvish/history
@@ -388,6 +388,9 @@ zig build test --summary all
 zig build-exe -fno-llvm -fno-lld -target aarch64-linux --show-builtin
 zig build-exe -lc -cflags -std=c2y -D_XOPEN_SOURCE=800 -- -target x86_64-linux-gnu -freference-trace=7 main.c allocator.zig
 zig build-exe -lc unique.zig
+zig fetch --save 'git+https://github.com/bernardassan/tardy#zig-0.15.1'
+zig fetch --save 'git+https://github.com/bernardassan/tardy?ref=zig-0.15.1#bf3b9b8a1bbbdab83e3ee536ad3152b7dfe04758'
+zig fetch --save https://github.com/bernardassan/tardy/archive/bf3b9b8a1bbbdab83e3ee536ad3152b7dfe04758.tar.gz
 zig fetch --save=zig-gobject git+https://github.com/ianprime0509/zig-gobject.git
 zig targets | from-json | put (all)[libc] | order | each { |target| put $target } (all)
 zig targets | jq .libc
@@ -399,4 +402,5 @@ zig test src/packed_and_extern_struct.zig
 zig translate-c -lc unique.c > unique.zig
 zig-update
 zig2 build-exe -fPIC -fno-lld -fno-stack-check --verbose-llvm-bc=main.bc -fno-emit-bin main.zig
+zig3 build -p stage4 -Denable-llvm -Dno-lib
 zig3 build -p stage4 -Doptimize=ReleaseFast -Denable-llvm -Dno-lib
