enable useful sysctl vm options for wsl
Don't ignore any command by default
make which command list all found binaries
Add zig build command that works to history

Signed-off-by: Bernard Assan <mega.alpha100@gmail.com>

--- a/config/elvish/history
+++ b/config/elvish/history
@@ -3,7 +3,6 @@ $runtime:elvish-path
 (which sshd) -Dddd -p 62226
 /bin/mount -fav ; sudo findmnt --verify --verbose
 BROWSER=firefox man -H
-CC=clang CXX=clang++ cmake -DCMAKE_BUILD_TYPE=Release -GNinja -DZIG_NO_LIB=ON ..
 LIBGL_ALWAYS_SOFTWARE=true kitty
 MESA_LOADER_DRIVER_OVERRIDE=d3d12 __EGL_VENDOR_LIBRARY_FILENAMES=/usr/share/glvnd/egl_vendor.d/50_mesa.json kitty
 adb connect 192.168.70.113:38877
@@ -42,6 +41,7 @@ chafa --symbols ~/files/Pictures/47.jpg
 chown -R www-data:www-data storage
 clang -g -nostartfiles -o main.clang main.bc
 clang++ -g -std=c++2b -fsanitize=address,bounds recursion.cxx -o exe
+cmake -DCMAKE_BUILD_TYPE=RelWithDebInfo -DZIG_NO_LIB=ON -DZIG_SHARED_LLVM=ON -DZIG_STATIC_ZSTD=OFF -DCMAKE_PREFIX_PATH=(brew --prefix llvm@21)';'(brew --prefix lld@21 )';'(brew --prefix zstd) -DZIG_EXTRA_BUILD_ARGS="--maxrss;8589934592" -DZIG_RELEASE_SAFE=ON -GNinja -S ..
 cmake -DCMAKE_BUILD_TYPE=Release -DZIG_NO_LIB=ON -GNinja -S ..
 cmake .. -DCMAKE_INSTALL_PREFIX=$E:XDG_LOCAL_HOME/llvm19-debug -DCMAKE_PREFIX_PATH=$E:XDG_LOCAL_HOME/llvm19-debug -DCMAKE_BUILD_TYPE=Debug -DLLVM_ENABLE_LIBXML2=OFF -DLLVM_ENABLE_LIBEDIT=OFF -DLLVM_PARALLEL_LINK_JOBS=(nproc) -DLLVM_PARALLEL_COMPILE_JOBS=(nproc) -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++ -DLLVM_ENABLE_LIBCXX=OFF -DLLVM_ENABLE_MODULES=OFF -DLLVM_USE_LINKER=mold -DLLVM_ENABLE_LTO=OFF -DLLVM_ENABLE_BACKTRACES=OFF -DLLVM_ENABLE_BINDINGS=OFF -DLLVM_ENABLE_CRASH_OVERRIDES=OFF -DLLVM_ENABLE_LIBPFM=OFF -DLLVM_ENABLE_OCAMLDOC=OFF -DLLVM_ENABLE_PLUGINS=OFF -DLLVM_ENABLE_Z3_SOLVER=OFF -DLLVM_BUILD_UTILS=OFF -DLLVM_BUILD_TOOLS=OFF -DLLVM_BUILD_STATIC=OFF -DLLVM_INCLUDE_UTILS=OFF -DLLVM_INCLUDE_TESTS=OFF -DLLVM_INCLUDE_EXAMPLES=OFF -DLLVM_INCLUDE_BENCHMARKS=OFF -DLLVM_INCLUDE_DOCS=OFF -DLLVM_TOOL_LLVM_LTO2_BUILD=OFF -DLLVM_TOOL_LLVM_LTO_BUILD=OFF -DLLVM_TOOL_LTO_BUILD=OFF -DLLVM_TOOL_REMARKS_SHLIB_BUILD=OFF -DLLVM_STATIC_LINK_CXX_STDLIB=ON -DLLVM_TARGETS_TO_BUILD="X86;AArch64;RISCV" -DCMAKE_CXX_STANDARD=26 -G Ninja #Build LLVM only in debug mode
 cmake .. -DCMAKE_INSTALL_PREFIX=$E:XDG_LOCAL_HOME/llvm19-debug -DCMAKE_PREFIX_PATH=$E:XDG_LOCAL_HOME/llvm19-debug -DCMAKE_BUILD_TYPE=Debug -DLLVM_ENABLE_LIBXML2=OFF -DLLVM_ENABLE_TERMINFO=OFF -DLLVM_ENABLE_LIBEDIT=OFF -DLLVM_PARALLEL_LINK_JOBS=(nproc) -DLLVM_PARALLEL_COMPILE_JOBS=(nproc) -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++  -DLLVM_ENABLE_LIBCXX=ON -DLLVM_ENABLE_MODULES=ON -DLLVM_USE_LINKER=mold -DLLVM_ENABLE_LTO=OFF -DLLVM_ENABLE_BACKTRACES=OFF -DLLVM_ENABLE_BINDINGS=OFF -DLLVM_ENABLE_CRASH_OVERRIDES=OFF -DLLVM_ENABLE_LIBPFM=OFF -DLLVM_ENABLE_OCAMLDOC=OFF -DLLVM_ENABLE_PLUGINS=OFF -DLLVM_ENABLE_Z3_SOLVER=OFF -DLLVM_BUILD_UTILS=OFF -DLLVM_BUILD_TOOLS=OFF -DLLVM_BUILD_STATIC=ON -DLLVM_INCLUDE_UTILS=OFF -DLLVM_INCLUDE_TESTS=OFF -DLLVM_INCLUDE_EXAMPLES=OFF -DLLVM_INCLUDE_BENCHMARKS=OFF -DLLVM_INCLUDE_DOCS=OFF -DLLVM_TOOL_LLVM_LTO2_BUILD=OFF -DLLVM_TOOL_LLVM_LTO_BUILD=OFF -DLLVM_TOOL_LTO_BUILD=OFF -DLLVM_TOOL_REMARKS_SHLIB_BUILD=OFF -DCLANG_BUILD_TOOLS=OFF -DCLANG_INCLUDE_DOCS=OFF -DCLANG_INCLUDE_TESTS=OFF -DCLANG_ENABLE_ARCMT=ON -DCLANG_TOOL_CLANG_IMPORT_TEST_BUILD=OFF -DCLANG_TOOL_CLANG_LINKER_WRAPPER_BUILD=OFF -DCLANG_TOOL_C_INDEX_TEST_BUILD=OFF -DCLANG_TOOL_ARCMT_TEST_BUILD=OFF -DCLANG_TOOL_C_ARCMT_TEST_BUILD=OFF -DCLANG_TOOL_LIBCLANG_BUILD=OFF -DLIBCLANG_BUILD_STATIC=ON -DLLD_BUILD_TOOLS=OFF -G Ninja #Build all llvm to be review for when building llvm in full with lld and clang projects enabled
